--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
-github: # [Pjbomb2]
-patreon: # Replace with a single Patreon username
+github: Pjbomb2
+patreon: Pjbomb2
