--- a/TrueTrace/Editor/TrueTraceEditor.asmdef
+++ b/TrueTrace/Editor/TrueTraceEditor.asmdef
@@ -2,7 +2,8 @@
     "name": "TrueTraceEditor",
     "rootNamespace": "",
     "references": [
-        "GUID:ed514bd980ff3ea46904db26e115c21d"
+        "GUID:ed514bd980ff3ea46904db26e115c21d",
+        "GUID:457756d89b35d2941b3e7b37b4ece6f1"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
