Set TrueTraceEditor.asmdef to editor compilation only

--- a/TrueTrace/Editor/TrueTraceEditor.asmdef
+++ b/TrueTrace/Editor/TrueTraceEditor.asmdef
@@ -5,7 +5,9 @@
         "GUID:ed514bd980ff3ea46904db26e115c21d",
         "GUID:457756d89b35d2941b3e7b37b4ece6f1"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
     "overrideReferences": false,
